force-app/main/default/objects/AdditionalDependentAppsLicenses__c/AdditionalDependentAppsLicenses__c.object-meta.xml
<CustomObject>
    <label>Additional Dependent Apps / Licenses</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Additional Dependent Apps / Licenses Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Dependent Apps / Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>