force-app/main/default/objects/AdditionalDependentAppsLicenses__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Additional Dependent Apps / Licenses</relationshipLabel>
    <relationshipName>AdditionalDependentAppsLicenses</relationshipName>
    <type>Lookup</type>
</CustomField>