force-app/main/default/objects/AdditionalDependentAppsLicenses__c/fields/DependentApplication__c.field-meta.xml
<CustomField>
    <fullName>DependentApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Additional Dependent Apps / Licenses (Dependent Application)</relationshipLabel>
    <relationshipName>Additional_Dependent_Apps_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>