force-app/main/default/objects/AdditionalDependentAppsLicenses__c/fields/DependentLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Additional Dependent Apps / Licenses</relationshipLabel>
    <relationshipName>AdditionalDependentAppsLicenses</relationshipName>
    <type>Lookup</type>
</CustomField>