force-app/main/default/objects/AdditionalDependentAppsLicenses__c/fields/DependentLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseStatus__c</fullName>
    <formula>TEXT(DependentLicense__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Status</label>
    <type>Text</type>
</CustomField>